<?xml version='1.0' encoding='utf-8'?>
<resources>

    <string name="app_name">ActivityTracker</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Create Strings -->
    <string name="add_activity">Add Activity</string>
    <string name="add_title">Title</string>
    <string name="add_description">Description</string>
    <string name="add_location">Location</string>
    <string name="add_startDate">Start Date</string>
    <string name="add_endDate">End Date</string>
    <string name="add_startTime">Start Time</string>
    <string name="pick_startTime">Pick Start Time</string>
    <string name="add_endTime">End Time</string>
    <string name="add_priority">Priority</string>
    <string name="add_alert">Alert</string>
    <string name="add_repetition">Repetition</string>
    <string name="add_notification">Notification</string>
    <string name="button_createActivity">Create Activity</string>
    <string name="selectdate">Select Start Date</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_controller">ActivityController</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_show">ShowActivity</string>

    <!-- Show Strings -->
	<string name="show_title">Show Title</string>
	<string name="show_description">Show Description</string>
	<string name="show_location">Show Location</string>
	<string name="show_startDate">Show Start Date</string>
	<string name="show_endDate">Show End Date</string>
	<string name="show_startTime">Show Start Time</string>
	<string name="show_endTime">Show End Time</string>
	<string name="show_priority">Show Priority</string>
	<string name="show_alert">Show Alert</string>
	<string name="show_repetition">Show Repetition</string>
	<string name="show_notification">Show Notification</string>
	
	<!-- Edit Strings -->
	<string name="button_editActivity">Save</string>
	<string name="edit_button">Edit</string>
	<string name="delete_button">Delete</string>
	
	<!-- Delete Strings -->
</resources>