<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowActivity" >
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#000000"
        android:orientation="vertical" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/delete_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/delete_button"
            android:text="@string/edit_button" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/relativeLayout1"
        android:text="@string/show_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />
	
    <TextView
        android:id="@+id/description"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/show_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/location"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/description"
        android:text="@string/show_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />
    
    <TextView
        android:id="@+id/endTime"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTime"
        android:layout_below="@+id/startTime"
        android:text="@string/show_endTime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/location"
        android:text="@string/show_startDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDate"
        android:layout_below="@+id/startDate"
        android:text="@string/show_endDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endDate"
        android:layout_below="@+id/endDate"
        android:text="@string/show_startTime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endTime"
        android:layout_below="@+id/endTime"
        android:text="@string/show_priority"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/alert"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/priority"
        android:layout_below="@+id/priority"
        android:text="@string/show_alert"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/repetition"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alert"
        android:layout_below="@+id/alert"
        android:text="@string/show_repetition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repetition"
        android:layout_below="@+id/repetition"
        android:text="@string/show_notification"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>