<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <!-- Title Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Title -->

	<EditText android:id="@+id/inputTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Description Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_description"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input description -->
	<EditText android:id="@+id/inputDescription" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:lines="4"
	    android:gravity="top" />
	
	<!-- Location Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input location -->
	<EditText android:id="@+id/inputLocation" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Start Date Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_startDate"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Start Date -->
	<EditText android:id="@+id/inputStartDate" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- End Date Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_endDate"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input End Date -->
	<EditText android:id="@+id/inputEndDate" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Start Time Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_startTime"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Start Time -->
	<EditText android:id="@+id/inputStartTime" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- End Time Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_endTime"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input End Time -->
	<EditText android:id="@+id/inputEndTime" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Priority Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_priority"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input location -->
	<EditText android:id="@+id/inputPriority" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Priority Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_priority"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>

    <!-- Input Priority -->
	<EditText android:id="@+id/inputPriority" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Alert Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_alert"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Alert -->
	<EditText android:id="@+id/inputAlert" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Repetition Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_repetition"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Repetition -->
	<EditText android:id="@+id/inputRepetition" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Notification Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_notification"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Notification -->
	<EditText android:id="@+id/inputNotification" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true" />
	
	<!-- Button Create Product -->
	<Button android:id="@+id/btnCreateActivity" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button_createActivity"/>
    </LinearLayout>
    

</ScrollView>